--- a/concluidas.html
+++ b/concluidas.html
@@ -292,7 +292,7 @@
       }
     });
     if (alterado) {
-      localStorage.setItem("listaTransportadoras", JSON.stringify(existinges));
+      localStorage.setItem("listaTransportadoras", JSON.stringify(existentes));
     }
   });
 </script>
