--- a/retornos.html
+++ b/retornos.html
@@ -204,7 +204,7 @@
       }
     });
     if (alterado) {
-      localStorage.setItem("listaTransportadoras", JSON.stringify(existinges));
+      localStorage.setItem("listaTransportadoras", JSON.stringify(existentes));
     }
   });
 </script>
